--- a/indec.html
+++ b/indec.html
@@ -32,7 +32,8 @@
             <h1 class="subject">SNS</h1>
             <div class="detail">
                 <p>한민고 7기 박지훈입니다.</p>
-                <a href="https://www.instagram.com/jihun.0911/" target="_blank">인스타로 이동하기</a>
+                <a class="sns_link" href="https://www.instagram.com/jihun.0911/"><img src="img/star.png" alt="instargram" style="width: 3rem;"></a>
+                <a class="sns_link" href="https://www.facebook.com"><img src="img/face.png" alt="facebook" style="width: 3rem;"></a>
             </div>
         </section>
     </section>
